<resources>
    <string name="app_name">SmartCity</string>
    <string name="registration">S\'inscrire</string>
    <string name="connection">Se connecter</string>
    <string name="personalInformations">Informations personnelles</string>
    <string name="name">Nom</string>
    <string name="firstName">Prenom</string>
    <string name="mail">Mail</string>
    <string name="password">Mot de passe</string>
    <string name="confirmPassword">Confirmer le mot de passe</string>
    <string name="number">Numéro de téléphone</string>
    <string name="firstNameInput">Prénom</string>
    <string name="nameInput">Nom</string>
    <string name="noAccountYet">Pas encore de compte ?</string>
    <string name="login">Login</string>
    <string name="restaurantTitle">Restaurants</string>
    <string name="drink">Bars</string>
    <string name="market">Magasins</string>
    <string name="direction">Direction</string>
    <string name="settings">Settings</string>
    <string name="preferences">Vos préférenes</string>
    <string name="bar">Bar</string>
    <string name="shopping">Shopping</string>
    <string name="createAccountButton">Créer le compte</string>
    <string name="nconnect">NConnect</string>
    <string name="drinkTitle">Bars</string>
    <string name="storesTitle">Commerces</string>
    <string name="settingsTitle">Paramètres</string>
    <string name="centerOfInterestH1">Mes centres d\'intérêts</string>
    <string name="restaurantCheckBox">Restauration</string>
    <string name="barCheckBox">Bar</string>
    <string name="shoppingCheckBox">Shopping</string>
    <string name="tourismeCheckBox">Tourisme</string>
    <string name="informationSettings">Information</string>
    <string name="titleFragmentElementDetail">Burger King</string>
    <string name="descriptionElementDetailTitle">Description</string>
    <string name="descriptionElementDetail">Pas de description disponible pour ce commerce.</string>
    <string name="scheduleTitle">Heure d\'ouverture</string>
    <string name="schedule">Pas d\'horaire disponible pour ce commerce</string>
    <string name="imageTitle">Image(s)</string>
    <string name="contactTitle">Contact</string>
    <string name="contact">Tél: 0475 45 78 96 \nFixe: 081 74 52 20\nEmail : burgerKing@hotmail.com</string>
    <string name="callButton">Appeler</string>
    <string name="sendMailButton">Envoyer un email</string>
    <string name="nextTitle">Suivant</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="without_connection">Sans se connecter</string>
    <string name="ValidationInscriptionButton">Créer le compte</string>
    <string name="next_image">Image suivante</string>
    <string name="actualite_content">Pas d\'actualitées disponible pour le moment.</string>
    <string name="actualites">Actualité(s)</string>
    <string name="URL_GET_RESTAURANTS">https://sc-nconnect.azurewebsites.net/api/Commerces?categorie=1</string>
    <string name="ERROR_ADD_USER">Impossible d\'ajouter un utilisateur !</string>
    <string name="URL_GET_MARKETS">https://sc-nconnect.azurewebsites.net/api/Commerces?categorie=2</string>
    <string name="URL_GET_BARS">https://sc-nconnect.azurewebsites.net/api/Commerces?categorie=3</string>
    <string name="delete_user_account">Supprimer mon compte</string>
    <string name="notifications">Notifications</string>
    <string name="location">Pas d\'adresse disponible</string>
    <string name="produit_phare">Produit phare :</string>
    <string name="No_Produit_Phare">Pas de produit phare pour se commerce</string>
    <string name="email">Email : /</string>
    <string name="mobile">Tél mobile : /</string>
    <string name="fixe">Tél fixe : /</string>
    <string name="No_Location">Pas de localisation</string>
    <string name="delete_account">Supprimer mon compte</string>
    <string name="Notifications">Notifications</string>
    <string name="appelez_gsm">Appelez (GSM)</string>
    <string name="appelez_fixe">Appelez (Fixe)</string>
    <string name="envoyer_un_email">Envoyer un email</string>
    <string name="itin_raire">Itinéraire</string>
    <string name="supprimer_le_favoris">Supprimer le favoris</string>
    <string name="localisation_title">Situé à</string>
    <string name="nameInputEmpty">Vous n\'avez pas entré de nom</string>
    <string name="firstNameEmpty">Vous n\'avez pas entré de prénom</string>
    <string name="emailEmpty">Vous n\'avez pas insérer d\'email</string>
    <string name="passwordEmpty">Vous n\'avez pas entré de mot de passe</string>
    <string name="passwordTooShort">Votre mot de passe doit contenir plus de 6 caractères !</string>
    <string name="confirmPasswordInput">Vous n\'avez pas entré de mot de passe</string>
    <string name="NotSamePassword">Vous devez insérer deux fois le même mot de passe !</string>
    <string name="loginHint">nom + prénom</string>
    <string name="invalid_email">Email invalide !</string>
</resources>
