<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemCallGSMButton"
        android:icon="@drawable/ic_call_button"
        android:title="@string/appelez_gsm"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/itemCallButton"
        android:icon="@drawable/ic_call_button"
        android:title="@string/appelez_fixe"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/itemSendMail"
        android:icon="@drawable/ic_send_mail"
        android:title="@string/envoyer_un_email"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/itemRouteButton"
        android:icon="@drawable/ic_route_naviguation"
        android:title="@string/itin_raire"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/itemFavorite"
        android:icon="@drawable/ic_favorite"
        android:title=""
        app:showAsAction="always"
        />
    <item
        android:id="@+id/itemDeleteFavorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/supprimer_le_favoris"
        app:showAsAction="never"
        />
</menu>